--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -11,10 +11,11 @@
 // Snotify
 @import '~vue-snotify/styles/material';
 
+
 //Vodal
 // include animation styles
-@import "~/vodal/common.css";
-@import "~/vodal/rotate.css";
+@import "~vodal/common.css";
+@import "~vodal/rotate.css";
 
 .navbar-laravel {
   background-color: #fff;
